--- a/AndroidProject/local.properties
+++ b/AndroidProject/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Oct 01 21:50:18 MSK 2023
-sdk.dir=C\:\\Users\\Gerle\\AppData\\Local\\Android\\Sdk
+#Sun Oct 08 00:52:00 MSK 2023
+sdk.dir=D\:\\android_sdk
